--- a/front-end/MathFront/package.json
+++ b/front-end/MathFront/package.json
@@ -7,7 +7,8 @@
     "react-dom": "15.6.1",
     "react-router-dom": "4.2.2",
     "websocket": "1.0.24",
-    "node-watch": "0.5.5"
+    "node-watch": "0.5.5",
+    "jquery": "2.1.0"
   },
   "devDependencies": {
     "webpack-dev-server": "2.8.2",
