--- a/front-end/MathFront/build.gradle
+++ b/front-end/MathFront/build.gradle
@@ -63,7 +63,7 @@ task buildBundle(type: NpmTask, dependsOn: [npmInstall, runDceKotlinJs]) {
 }
 
 task copyKotlinJs(type: Copy, dependsOn: compileKotlin2Js) {
-    def workDir = "$buildDir/classes/main/"
+    def workDir = "$buildDir/classes/kotlin/main/"
     from(workDir) {
         include "*.js"
         include "*.js.map"
