--- a/back-end/build.gradle
+++ b/back-end/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
 	ext {
-		kotlinVersion = '1.2.0'
+		kotlinVersion = '1.2.41'
 		springBootVersion = '2.0.0.M7'
 	}
 	repositories {
@@ -17,6 +17,7 @@ buildscript {
 
 apply plugin: 'kotlin'
 apply plugin: 'kotlin-spring'
+apply plugin: 'idea'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
@@ -31,8 +32,14 @@ compileTestKotlin {
 	kotlinOptions.jvmTarget = "1.8"
 }
 
+bootJar{
+	baseName = 'math-back'
+	version '0.1'
+}
+
 repositories {
 	mavenCentral()
+	jcenter()
 	maven { url "https://repo.spring.io/snapshot" }
 	maven { url "https://repo.spring.io/milestone" }
 }
@@ -43,6 +50,8 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile("org.jetbrains.kotlin:kotlin-stdlib-jre8")
 	compile("org.jetbrains.kotlin:kotlin-reflect")
+	compile "io.springfox:springfox-swagger2:2.9.0"
+	compile("org.springframework.boot:spring-boot-starter-cache")
 	runtime('com.h2database:h2')
 	runtime('org.postgresql:postgresql')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
