--- a/back-end/build.gradle
+++ b/back-end/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
 	ext {
-		kotlinVersion = '1.2.41'
+		kotlinVersion = '1.2.51'
 		springBootVersion = '2.0.0.M7'
 	}
 	repositories {
@@ -48,7 +48,8 @@ repositories {
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-validation')
 	compile('org.springframework.boot:spring-boot-starter-web')
-	compile("org.jetbrains.kotlin:kotlin-stdlib-jre8")
+	compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
+	compile group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version:kotlinVersion
 	compile("org.jetbrains.kotlin:kotlin-reflect")
 	compile "io.springfox:springfox-swagger2:2.9.0"
 	compile("org.springframework.boot:spring-boot-starter-cache")
